--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,10 @@ a {
   text-decoration: none;
 }
 
+video {
+  max-width: 100%;
+}
+
 button {
   background-color: var(--main-clr);
   border: none;
