--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,33 +1,14 @@
 footer {
   display: flex;
   flex-direction: column;
-  padding: 3rem 0;
-  background-color: var(--main-clr);
+  padding-top: 3rem;
+  background: linear-gradient(147.92deg, #ff5e14 43.36%, #ffa132 127.02%);
 }
 
 .main {
   display: flex;
   justify-content: space-between;
   gap: 2rem;
-}
-
-.main form {
-  padding: 2rem;
-  background-color: #fff;
-  width: 50%;
-  color: var(--secondary-clr);
-}
-
-.main form > div {
-  display: flex;
-  flex-direction: column;
-  margin-top: 1rem;
-}
-
-.main form button {
-  float: right;
-  margin-top: 1rem;
-  font-size: 1rem;
 }
 
 .main-left {
@@ -40,4 +21,11 @@ footer {
 .main-left h2 {
   font-size: clamp(1.8rem, 2.5vw, 2.9rem);
   letter-spacing: 1.1px;
+}
+
+.secondary {
+  background-color: var(--main-clr);
+  padding-block: 1rem;
+  margin-top: 4rem;
+  color: #fff;
 }
