--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -18,8 +18,8 @@ header ul {
 }
 
 header ul li {
-  text-transform: uppercase;
-  font-weight: 700;
+  /* text-transform: uppercase; */
+  font-weight: 600;
   font-size: clamp(0.85rem, 1.1vw, 1.2rem);
 }
 
