--- a/src/components/Sections/Hero.module.css
+++ b/src/components/Sections/Hero.module.css
@@ -14,6 +14,7 @@
   left: 50%;
   transform: translateX(-50%);
   color: #fff;
+  text-align: center;
 }
 
 .carousel-caption h3 {
@@ -21,5 +22,5 @@
 }
 
 .carousel-caption p {
-  font-size: clamp(0.85rem, 1.1vw, 1.3rem);
+  font-size: clamp(0.85rem, 2vw, 1.7rem);
 }
