--- a/src/components/Sections/GalerijaSection.module.css
+++ b/src/components/Sections/GalerijaSection.module.css
@@ -3,7 +3,6 @@
 }
 
 .galerija h1 {
-  font-size: clamp(1.2rem, 3vw, 2.5rem);
   color: var(--secondary-clr);
   margin-bottom: 2.5rem;
 }
@@ -13,6 +12,7 @@
   grid-template-columns: repeat(9, minmax(auto, 10em));
   grid-template-rows: repeat(7, minmax(5em, auto));
   gap: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .grid-item {
@@ -71,8 +71,8 @@
   margin-top: 1rem;
 }
 
-.secondary-photos > div {
-  width: clamp(70px, 10vw, 150px);
+.secondary-photo {
+  /* width: clamp(70px, 10vw, 150px); */
   aspect-ratio: 1;
   background-size: cover;
 }
