--- a/src/components/Sections/AboutProduct.module.css
+++ b/src/components/Sections/AboutProduct.module.css
@@ -1,6 +1,3 @@
-.about-product {
-}
-
 .wrapper {
   display: flex;
   justify-content: space-between;
@@ -10,17 +7,12 @@
 }
 
 .wrapper h2 {
-  font-size: clamp(1.2rem, 3vw, 2.2rem);
   margin-bottom: 1rem;
 }
 
 .wrapper button {
   margin-top: 30px;
   font-size: 1.2rem;
-}
-
-.wrapper p {
-  font-size: clamp(0.8rem, 2vw, 1.2rem);
 }
 
 .left-side,
@@ -35,7 +27,6 @@
     rgba(0, 178, 255, 0.82) 212.1%
   );
   width: 50%;
-
   align-self: baseline;
 }
 
@@ -64,6 +55,10 @@
   display: flex;
 }
 
+.img-wrapper img {
+  width: 74%;
+}
+
 .img-wrapper > div {
   align-self: center;
   text-align: right;
@@ -74,6 +69,69 @@
   font-size: clamp(0.8rem, 2vw, 1.3rem);
 }
 
-.img-wrapper h2 {
-  font-size: clamp(1.2rem, 3vw, 2.5rem);
+@media only screen and (max-width: 1200px) {
+  .left-side,
+  .right-side {
+    padding: 2.2rem 2.5rem;
+  }
+  .wrapper {
+    gap: 3rem;
+  }
+}
+
+@media only screen and (max-width: 1250px) {
+  .img-wrapper {
+    margin-bottom: 2rem;
+  }
+
+  .img-wrapper > div {
+    align-self: flex-end;
+  }
+}
+
+@media only screen and (max-width: 1050px) {
+  .img-wrapper {
+    margin-left: 0;
+    flex-direction: column;
+  }
+
+  .img-wrapper > div {
+    text-align: left;
+  }
+}
+
+@media only screen and (max-width: 915px) {
+  .left-side,
+  .right-side {
+    padding: 2.2rem 2.5rem;
+  }
+
+  .wrapper {
+    gap: 2rem;
+  }
+}
+
+@media only screen and (max-width: 880px) {
+  .left-side,
+  .right-side {
+    width: initial;
+  }
+
+  .wrapper {
+    gap: 0;
+    flex-direction: column;
+  }
+
+  .right-side {
+    margin-top: 0;
+  }
+
+  .img-wrapper {
+    margin-top: -1rem;
+  }
+
+  .img-wrapper img {
+    width: 100%;
+    transform: scale(1.1);
+  }
 }
