--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ li {
 
 a {
   text-decoration: none;
+  color: inherit;
 }
 
 video {
@@ -26,7 +27,7 @@ video {
 button {
   background-color: var(--main-clr);
   border: none;
-  padding: 0.5em 2.5em;
+  padding: 0.5em 2em;
   color: #fff;
   text-transform: uppercase;
   font-weight: 600;
@@ -52,12 +53,12 @@ body {
 }
 
 .swiper-button-prev {
-  color: #fff;
+  color: var(--secondary-clr);
   font-weight: 800;
 }
 
 .swiper-button-next {
-  color: #fff;
+  color: var(--secondary-clr);
   font-weight: 800;
 }
 
@@ -72,4 +73,41 @@ body {
 
 .swiper-pagination-bullet-active {
   background-color: var(--main-clr);
+}
+
+/* Instagram and Facebook icons */
+.icons {
+  display: flex;
+  align-items: center;
+  gap: 0.2rem;
+  margin-top: 1rem;
+}
+
+.icons svg.ig {
+  width: clamp(32px, 5vw, 40px);
+}
+
+.icons svg.fb {
+  width: clamp(28px, 4.7vw, 35px);
+}
+
+/* Responsive fonts */
+p,
+span,
+label,
+li,
+a {
+  font-size: clamp(0.87rem, 2.1vw, 1.1rem);
+}
+
+h1 {
+  font-size: clamp(1.9rem, 4vw, 2.5rem);
+}
+
+h2 {
+  font-size: clamp(1.5rem, 3vw, 2.2rem);
+}
+
+h3 {
+  font-size: clamp(1rem, 2vw, 1.2rem);
 }
