--- a/src/components/Sections/AboutProduct.module.css
+++ b/src/components/Sections/AboutProduct.module.css
@@ -135,3 +135,13 @@
     transform: scale(1.1);
   }
 }
+
+@media only screen and (max-width: 420px) {
+  .left-side p {
+    margin-right: 0;
+  }
+
+  .right-side p {
+    margin-left: 0;
+  }
+}
