--- a/src/components/Sections/Achievements.module.css
+++ b/src/components/Sections/Achievements.module.css
@@ -37,3 +37,17 @@
 .wrapper img {
   width: clamp(35px, 3.5vw, 50px);
 }
+
+@media only screen and (max-width: 600px) {
+  .wrapper {
+    flex-direction: column;
+    gap: 3rem;
+  }
+
+  .achievements {
+    padding-bottom: 5rem;
+  }
+  .wrapper svg {
+    margin-bottom: -10px;
+  }
+}
