--- a/src/components/Sections/Hero.module.css
+++ b/src/components/Sections/Hero.module.css
@@ -1,6 +1,7 @@
 .hero {
-  /* padding-top: 30px; */
+  position: relative;
   height: calc(100vh - 1rem);
+  overflow: hidden;
 }
 
 .img {
@@ -10,17 +11,71 @@
 
 .carousel-caption {
   position: absolute;
-  bottom: 20%;
+  bottom: 15%;
   left: 50%;
   transform: translateX(-50%);
   color: #fff;
   text-align: center;
 }
 
-.carousel-caption h3 {
-  font-size: clamp(3rem, 5vw, 6rem);
-}
-
 .carousel-caption p {
   font-size: clamp(0.85rem, 2vw, 1.7rem);
+}
+
+.carousel-caption h1 {
+  font-size: clamp(2.5rem, 4vw, 6rem);
+  font-weight: 800;
+  line-height: 1.2;
+  margin-bottom: 1.5rem;
+}
+
+.hero button {
+  font-size: 1.2rem;
+}
+
+.icons {
+  position: absolute;
+  right: 0px;
+  top: 14%;
+  z-index: 9999;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.phone-wrapper {
+  display: flex;
+  gap: 1.1rem;
+  align-items: center;
+  color: #fff;
+  padding: 1rem;
+  background-color: var(--secondary-clr);
+  text-align: center;
+  transform: translateX(151px);
+  transition: transform 1s;
+}
+
+.phone-wrapper:hover,
+.location-wrapper:hover {
+  transform: translateX(0);
+}
+
+.phone-wrapper img {
+  width: clamp(32px, 5vw, 40px);
+}
+
+.location-wrapper {
+  display: flex;
+  gap: 1.1rem;
+  align-items: center;
+  color: var(--secondary-clr);
+  padding: 1rem;
+  background-color: #fff;
+  text-align: center;
+  transform: translateX(151px);
+  transition: transform 1s;
+}
+
+.location-wrapper img {
+  width: clamp(32px, 5vw, 28px);
 }
