--- a/src/components/Sections/VideoSection.module.css
+++ b/src/components/Sections/VideoSection.module.css
@@ -27,13 +27,21 @@
   gap: 1rem;
 }
 
-.wrapper h2 {
-  font-size: clamp(1.2rem, 3vw, 2.2rem);
-}
-
 .wrapper button {
   align-self: center;
   background-color: var(--secondary-clr);
   margin-top: 1rem;
   font-size: 1.2rem;
+}
+
+@media only screen and (max-width: 1360px) {
+  .shadow {
+    box-shadow: inset 0 -70px 0 0px #fff, inset 0 70px 0px 0px #fff;
+  }
+}
+
+@media only screen and (max-width: 1050px) {
+  .shadow {
+    box-shadow: none;
+  }
 }
