--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,26 @@ body {
   font-weight: 800;
 }
 
+.hero .swiper-button-prev,
+.hero .swiper-button-next {
+  color: #fff !important;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.hero .swiper-button-prev {
+  left: 0;
+  padding: 4rem 2.2rem 4rem 1.8rem;
+}
+
+.hero .swiper-button-next {
+  right: 0;
+  padding: 4rem 1.8rem 4rem 2.2rem;
+}
+
+.swiper [class^='swiper-button-prev']::after {
+  /* font-size: 50px !important; */
+}
+
 .swiper {
   height: 100%;
 }
