--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -18,7 +18,6 @@ header ul {
 }
 
 header ul li {
-  /* text-transform: uppercase; */
   font-weight: 600;
 }
 
@@ -44,5 +43,19 @@ header ul li a {
 @media only screen and (max-width: 950px) {
   header ul {
     gap: 0.8rem;
+  }
+}
+
+@media only screen and (max-width: 680px) {
+  header {
+    flex-direction: column;
+    gap: 0.7rem;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  header {
+    flex-direction: initial;
+    padding-block: 0.5rem;
   }
 }
