--- a/src/components/Sections/GalerijaSection.module.css
+++ b/src/components/Sections/GalerijaSection.module.css
@@ -17,6 +17,7 @@
 
 .grid-item {
   background-size: cover;
+  cursor: pointer;
 }
 
 .grid-item:nth-child(1) {
@@ -75,4 +76,64 @@
   /* width: clamp(70px, 10vw, 150px); */
   aspect-ratio: 1;
   background-size: cover;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 840px) {
+  .grid {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+
+  .grid-item {
+    aspect-ratio: 1;
+  }
+
+  .grid-item:nth-child(1) {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+
+  .grid-item:nth-child(2) {
+    grid-column: 2/3;
+    grid-row: 1/2;
+  }
+
+  .grid-item:nth-child(3) {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+
+  .grid-item:nth-child(4) {
+    grid-column: 2/3;
+    grid-row: 2/3;
+  }
+
+  .grid-item:nth-child(5) {
+    grid-column: 1/2;
+    grid-row: 3/4;
+  }
+
+  .grid-item:nth-child(6) {
+    grid-column: 2/3;
+    grid-row: 3/4;
+  }
+
+  .grid-item:nth-child(7) {
+    grid-column: 1/2;
+    grid-row: 4/5;
+  }
+
+  .grid-item:nth-child(8) {
+    grid-column: 2/3;
+    grid-row: 4/5;
+  }
+
+  .galerija h1 {
+    text-align: center;
+  }
+
+  .galerija ol {
+    justify-content: center;
+  }
 }
