--- a/src/components/Sections/Hero.module.css
+++ b/src/components/Sections/Hero.module.css
@@ -6,7 +6,9 @@
 }
 
 .img {
-  width: 100%;
+  min-height: 100%;
+  max-width: initial;
+  min-width: 100%;
   filter: brightness(80%);
 }
 
@@ -20,11 +22,11 @@
 }
 
 .carousel-caption p {
-  font-size: clamp(0.85rem, 2vw, 1.7rem);
+  font-size: clamp(1.1rem, 2vw, 1.7rem);
 }
 
 .carousel-caption h1 {
-  font-size: clamp(2.5rem, 5vw, 5.5rem);
+  font-size: clamp(3.3rem, 5vw, 5.5rem);
   font-weight: 800;
   line-height: 1.2;
   margin-bottom: 1.5rem;
@@ -38,7 +40,7 @@
   position: absolute;
   right: 0px;
   top: 14%;
-  z-index: 9999;
+  z-index: 9;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -52,8 +54,18 @@
   padding: 1rem;
   background-color: var(--secondary-clr);
   text-align: center;
-  transform: translateX(151px);
+  transform: translateX(175px);
   transition: transform 1s;
+}
+
+.phone-wrapper a,
+.location-wrapper a {
+  transition: color 0.2s;
+}
+
+.phone-wrapper a:hover,
+.location-wrapper a:hover {
+  color: var(--main-clr);
 }
 
 .phone-wrapper:hover,
@@ -73,25 +85,29 @@
   padding: 1rem;
   background-color: #fff;
   text-align: center;
-  transform: translateX(151px);
+  transform: translateX(175px);
   transition: transform 1s;
 }
 
 .location-wrapper img {
-  width: clamp(32px, 5vw, 28px);
+  width: clamp(32px, 5vw, 40px);
 }
 
 @media only screen and (max-width: 785px) {
   .phone-wrapper,
   .location-wrapper {
-    transform: translateX(138px);
+    transform: translateX(161px);
   }
 }
 
 @media only screen and (max-width: 700px) {
   .phone-wrapper,
   .location-wrapper {
-    transform: translateX(126px);
+    transform: translateX(146px);
+  }
+
+  .hero {
+    height: calc(100vh - 100px);
   }
 }
 
@@ -104,5 +120,8 @@
 @media only screen and (max-width: 600px) {
   .icons {
     top: 13%;
+  }
+  .carousel-caption {
+    bottom: 17%;
   }
 }
