--- a/src/components/Sections/ONamaSection.module.css
+++ b/src/components/Sections/ONamaSection.module.css
@@ -22,3 +22,13 @@
 .o-nama svg path:nth-child(1) {
   fill: var(--main-clr);
 }
+
+@media only screen and (max-width: 840px) {
+  .o-nama h1 {
+    text-align: center;
+  }
+
+  .o-nama ol {
+    justify-content: center;
+  }
+}
