--- a/src/components/Sections/ReferenceSection.module.css
+++ b/src/components/Sections/ReferenceSection.module.css
@@ -16,3 +16,13 @@
 .wrapper p {
   margin-bottom: 2rem;
 }
+
+@media only screen and (max-width: 840px) {
+  .reference h1 {
+    text-align: center;
+  }
+
+  .reference ol {
+    justify-content: center;
+  }
+}
