--- a/src/components/Sections/VideoSection.module.css
+++ b/src/components/Sections/VideoSection.module.css
@@ -35,8 +35,14 @@
   font-size: 1.2rem;
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 600px) {
   .wrapper {
     width: 130%;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .wrapper {
+    width: 164%;
   }
 }
