--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@
   font-family: 'Poppins', 'sans-serif';
 }
 
+::selection {
+  background-color: #ff7c40;
+  color: var(--secondary-clr);
+}
+
 img {
   max-width: 100%;
 }
@@ -69,8 +74,42 @@ body {
 }
 
 .gallery .swiper-button-prev,
-.gallery .swiper-button-next {
+.gallery .swiper-button-next,
+.overlay .swiper-button-next,
+.overlay .swiper-button-prev {
   color: #fff !important;
+}
+
+.hero .swiper-button-prev,
+.hero .swiper-button-next {
+  top: 46%;
+}
+
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  font-size: clamp(34px, 4vw, 45px);
+}
+
+@media only screen and (max-width: 840px) {
+  .hero .swiper-button-prev {
+    left: 0;
+    padding: 3rem 2rem 3rem 1.6rem !important;
+  }
+
+  .hero .swiper-button-next {
+    right: 0;
+    padding: 3rem 1.6rem 3rem 2rem !important;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .hero .swiper-button-prev {
+    padding: 2.5rem 1.8rem 2.5rem 1.4rem !important;
+  }
+
+  .hero .swiper-button-next {
+    padding: 2.5rem 1.4rem 2.5rem 1.8rem !important;
+  }
 }
 
 .hero .swiper-button-prev {
@@ -83,12 +122,13 @@ body {
   padding: 4rem 1.8rem 4rem 2.2rem;
 }
 
-.products .container {
-  width: clamp(350px, 80vw, 1300px) !important;
+.related .swiper-wrapper {
+  align-items: flex-end;
 }
 
-.swiper [class^='swiper-button-prev']::after {
-  /* font-size: 50px !important; */
+.products .container,
+.gallery .container {
+  width: clamp(350px, 80vw, 1300px) !important;
 }
 
 .swiper {
@@ -145,4 +185,8 @@ h2 {
 
 h3 {
   font-size: clamp(1rem, 2vw, 1.2rem);
+}
+
+button {
+  font-size: clamp(1rem, 1.7vw, 1.35rem) !important;
 }
