--- a/src/components/UI/ContactForm.module.css
+++ b/src/components/UI/ContactForm.module.css
@@ -14,5 +14,5 @@
 .form button {
   float: right;
   margin-top: 1rem;
-  font-size: 1rem;
+  font-size: clamp(0.8rem, 1.7vw, 1.15rem) !important;
 }
