--- a/src/components/Sections/ProductSection.module.css
+++ b/src/components/Sections/ProductSection.module.css
@@ -19,6 +19,9 @@
   background-size: cover;
   padding: 1rem;
   box-shadow: 0px 0px 47px 1px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .other-images {
@@ -37,7 +40,6 @@
 
 .content h1 {
   color: var(--secondary-clr);
-  margin-bottom: 1rem;
 }
 
 .content button {
@@ -64,8 +66,9 @@
 }
 
 .pm-tools {
-  width: 120px;
+  width: 180px;
   vertical-align: middle;
+  margin-bottom: 1rem;
 }
 
 @media only screen and (max-width: 900px) {
