--- a/src/components/Sections/ONamaSection.module.css
+++ b/src/components/Sections/ONamaSection.module.css
@@ -21,6 +21,11 @@
 
 .o-nama svg path:nth-child(1) {
   fill: var(--main-clr);
+  transition: fill 0.3s;
+}
+
+.o-nama a:hover svg path:nth-child(1) {
+  fill: var(--secondary-clr);
 }
 
 @media only screen and (max-width: 840px) {
