--- a/src/components/Sections/Products.module.css
+++ b/src/components/Sections/Products.module.css
@@ -46,6 +46,17 @@
   padding: 0.3rem 0;
 }
 
+.select-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.select-wrapper span {
+  margin-left: 10px;
+  color: var(--secondary-clr);
+}
+
 @media only screen and (max-width: 840px) {
   .wrapper {
     flex-direction: column;
