--- a/src/components/Sections/Hero.module.css
+++ b/src/components/Sections/Hero.module.css
@@ -26,7 +26,8 @@
 }
 
 .carousel-caption h1 {
-  font-size: clamp(3.3rem, 6vw, 4.5rem);
+  /* font-size: clamp(3.3rem, 6vw, 5.5rem); */
+  font-size: clamp(2rem, 6vw, 4.5rem);
   font-weight: 800;
   line-height: 1.2;
   margin-bottom: 1.5rem;
