--- a/src/components/Sections/ProductSection.module.css
+++ b/src/components/Sections/ProductSection.module.css
@@ -60,7 +60,8 @@
 }
 
 .secondary-photo {
-  aspect-ratio: 1;
+  background-position-y: center;
+  padding-top: 90%;
   background-size: cover;
   cursor: pointer;
   transition: filter 0.3s;
