--- a/src/components/Sections/Hero.module.css
+++ b/src/components/Sections/Hero.module.css
@@ -6,10 +6,10 @@
 }
 
 .img {
-  min-height: 100%;
-  max-width: initial;
-  min-width: 100%;
   filter: brightness(50%);
+  background-size: cover;
+  width: 100%;
+  height: 100%;
 }
 
 .carousel-caption {
@@ -27,7 +27,7 @@
 
 .carousel-caption h1 {
   /* font-size: clamp(3.3rem, 6vw, 5.5rem); */
-  font-size: clamp(2rem, 6vw, 4.5rem);
+  font-size: clamp(2.7rem, 6vw, 4.8rem);
   font-weight: 800;
   line-height: 1.2;
   margin-bottom: 1.5rem;
@@ -129,5 +129,9 @@
   }
   .carousel-caption {
     bottom: 17%;
+  }
+
+  .img {
+    background-position-x: -200px;
   }
 }
