--- a/src/components/UI/GalleryOverlay.module.css
+++ b/src/components/UI/GalleryOverlay.module.css
@@ -4,8 +4,8 @@
   height: 100vh;
   top: 0;
   z-index: 9999999;
-  padding: 2rem clamp(1rem, 15.5vw, 18rem);
-  gap: 1rem;
+  padding: 5rem clamp(1rem, 15.5vw, 18rem);
+  gap: 2rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -16,6 +16,7 @@
 
 .overlay .main {
   width: 80%;
+  height: 100%;
   overflow: hidden;
 }
 
@@ -29,6 +30,7 @@
   }
 
   .overlay {
-    padding: 2rem 1rem;
+    padding: 10rem 1rem;
+    gap: 1rem;
   }
 }
