--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -61,6 +61,7 @@ header ul li a:hover {
 @media only screen and (max-width: 600px) {
   header {
     flex-direction: initial;
-    padding-block: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-top: 0.5rem;
   }
 }
