--- a/src/components/Sections/Hero.module.css
+++ b/src/components/Sections/Hero.module.css
@@ -48,7 +48,6 @@
   z-index: 9;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
 }
 
 .phone-wrapper {
@@ -61,6 +60,7 @@
   text-align: center;
   transform: translateX(175px);
   transition: transform 1s;
+  margin-bottom: 1rem;
 }
 
 .phone-wrapper a,
@@ -125,8 +125,12 @@
 @media only screen and (max-width: 600px) {
   .icons {
     top: 13%;
-    gap: 0.8rem;
   }
+
+  .phone-wrapper {
+    margin-bottom: 0.8rem;
+  }
+
   .carousel-caption {
     bottom: 17%;
   }
