--- a/src/components/Sections/AboutProduct.module.css
+++ b/src/components/Sections/AboutProduct.module.css
@@ -158,6 +158,10 @@
     width: 100%;
     transform: scale(1.1);
   }
+
+  .img-wrapper > div > h2 {
+    margin-top: 20px;
+  }
 }
 
 @media only screen and (max-width: 420px) {
