--- a/src/components/UI/ContactForm.module.css
+++ b/src/components/UI/ContactForm.module.css
@@ -15,4 +15,9 @@
   float: right;
   margin-top: 1rem;
   font-size: clamp(0.8rem, 1.7vw, 1.15rem) !important;
+  transition: background-color 0.2s;
+}
+
+.form button:hover {
+  background-color: var(--secondary-clr);
 }
