--- a/src/components/Sections/ContactSection.module.css
+++ b/src/components/Sections/ContactSection.module.css
@@ -43,6 +43,14 @@
   fill: var(--main-clr);
 }
 
+.link {
+  transition: color 0.2s;
+}
+
+.link:hover {
+  color: var(--main-clr);
+}
+
 @media only screen and (max-width: 930px) {
   .wrapper {
     flex-direction: column;
